# biona-hq

./: .gitignore  Biona_Axon_Prompts.md  Biona_Engineering_Prompts.docx  README.md  SECRETS_SETUP.md
.github/workflows/: cd.yml  ci.yml  train.yml
docker/: Dockerfile.lab  Dockerfile.nora-health
k8s/base/: biona-lab.yaml  kustomization.yaml  nora-health.yaml
k8s/overlays/production/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
nora_health/: app.py  requirements.txt
scripts/: smoke_test.sh
snie/: .gitignore  README.md  build_windows.ps1
snie/biona/axon/: CMakeLists.txt
snie/biona/axon/adapters/: CMakeLists.txt
snie/biona/axon/cmake/: CompilerFlags.cmake  FindONNXRuntime.cmake
snie/biona/axon/cmake/toolchains/: android-arm64.cmake  ios-arm64.cmake  linux-x86_64.cmake
snie/biona/axon/core/: CMakeLists.txt
snie/biona/axon/core/include/biona/core/: errors.hpp  onnx_contract.hpp  signal.hpp  signal_thread_pool.hpp  spsc_queue.hpp  types.hpp
snie/biona/axon/core/include/biona/core/interfaces/: frontend.hpp  inference_engine.hpp  signal_layer.hpp  vad.hpp
snie/biona/axon/core/src/: inference_engine_factory.cpp  onnx_contract.cpp  signal.cpp  signal_thread_pool.cpp
snie/biona/axon/core/src/vad/: energy_vad.cpp  energy_vad.hpp  vad_factory.cpp  webrtc_vad.cpp  webrtc_vad.hpp
snie/biona/axon/engines/: CMakeLists.txt
snie/biona/axon/engines/coreml/: CMakeLists.txt
snie/biona/axon/engines/onnx/: CMakeLists.txt
snie/biona/axon/engines/onnx/include/biona/axons/: onnx_engine.hpp
snie/biona/axon/engines/onnx/src/: onnx_engine.cpp
snie/biona/axon/engines/tflite/: CMakeLists.txt
snie/biona/axon/sdk/: CMakeLists.txt
snie/biona/axon/sdk/include/biona/: biona.h  biona.hpp
snie/biona/axon/sdk/src/: biona_sdk.cpp
snie/biona/axon/security/: CMakeLists.txt
snie/biona/axon/security/include/biona/security/: model_loader.hpp  safe_log.hpp  secret_manager.hpp  secure_buffer.hpp
snie/biona/axon/security/src/: model_loader.cpp  safe_log.cpp  secret_manager_env.cpp  secret_manager_factory.cpp
snie/biona/axon/tests/: CMakeLists.txt
snie/biona/axon/tests/eval/: CMakeLists.txt  eval_harness.cpp
snie/biona/axon/tests/integration/: CMakeLists.txt  test_pipeline_mock.cpp
snie/biona/axon/tests/unit/: CMakeLists.txt  test_safe_log.cpp  test_secret_manager.cpp  test_signal_schema.cpp  test_spsc_queue.cpp  test_vad.cpp
snie/biona/lab/: .env.example  Biona_Claude_CLI_Prompts.md  Biona_Lab_Prompts.md  Makefile  pyproject.toml  requirements.txt
snie/biona/lab/biona_lab/: __init__.py
snie/biona/lab/biona_lab/data/: features.py  librispeech.py  shards.py
snie/biona/lab/biona_lab/eval/: wer.py
snie/biona/lab/biona_lab/labeling/: semantic_labeler.py
snie/biona/lab/biona_lab/model/: emformer.py  export.py
snie/biona/lab/biona_lab/training/: train.py
snie/biona/lab/scripts/: download_librispeech.sh  export_model.py  run_labeling.py
snie/biona/lab/tests/: test_features.py  test_model.py  test_schema.py
snie/build_msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BionaAxon.sln  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
snie/build_msvc/adapters/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
snie/build_msvc/core/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  biona_core.vcxproj  biona_core.vcxproj.filters  cmake_install.cmake
snie/build_msvc/core/Release/: biona_core.lib
snie/build_msvc/core/biona_core.dir/Release/biona_core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  (+1 more)
snie/build_msvc/engines/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
snie/build_msvc/engines/coreml/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
snie/build_msvc/engines/onnx/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  biona_onnx_engine.vcxproj  biona_onnx_engine.vcxproj.filters  cmake_install.cmake
snie/build_msvc/engines/tflite/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
snie/build_msvc/sdk/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  biona_sdk.vcxproj  biona_sdk.vcxproj.filters  cmake_install.cmake
snie/build_msvc/security/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  biona_security.vcxproj  biona_security.vcxproj.filters  cmake_install.cmake
snie/build_msvc/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
snie/build_msvc/tests/eval/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  eval_harness.vcxproj  eval_harness.vcxproj.filters
snie/build_msvc/tests/integration/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  test_pipeline_mock.vcxproj  test_pipeline_mock.vcxproj.filters
snie/build_msvc/tests/unit/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  test_safe_log.vcxproj  test_safe_log.vcxproj.filters  test_secret_manager.vcxproj  test_secret_manager.vcxproj.filters  test_signal_schema.vcxproj  test_signal_schema.vcxproj.filters  test_spsc_queue.vcxproj  test_spsc_queue.vcxproj.filters  test_vad.vcxproj  test_vad.vcxproj.filters
snie/build_msvc/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
snie/tools/encrypt_model/: CMakeLists.txt  encrypt_model.cpp
(+28 files in other folders)
